@@ -25,4 +25,6 @@ gora.mongodb.override_hadoop_configuration=false
 gora.mongodb.mapping.file=/gora-mongodb-mapping.xml
 gora.mongodb.servers=localhost
 gora.mongodb.db=nutchtest
+gora.mongodb.readpreference=primary
+gora.mongodb.writeconcern=acknowledged
 
